--- a/MyProjects/patch/Drums/.vscode/launch.json
+++ b/MyProjects/patch/Drums/.vscode/launch.json
@@ -10,7 +10,7 @@
         "-d",
         "${workspaceRoot}"
       ],
-      "executable": "${workspaceRoot}/build/MaqamQ.elf",
+      "executable": "${workspaceRoot}/build/Drums.elf",
       "interface": "swd",
       "name": "Cortex Debug",
       "openOCDLaunchCommands": [
