--- a/patch/PolyOsc/.vscode/launch.json
+++ b/patch/PolyOsc/.vscode/launch.json
@@ -10,7 +10,7 @@
         "-d",
         "${workspaceRoot}"
       ],
-      "executable": "${workspaceRoot}/build/PolyOsc.elf",
+      "executable": "${workspaceRoot}/build/ChordMachine.elf",
       "interface": "swd",
       "name": "Cortex Debug",
       "openOCDLaunchCommands": [
