--- a/MyProjects/patchSM/myPolyOscWithQuantizeSM/.vscode/settings.json
+++ b/MyProjects/patchSM/myPolyOscWithQuantizeSM/.vscode/settings.json
@@ -66,5 +66,6 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp"
-    }
+    },
+    "makefile.configureOnOpen": true
 }
